k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bv-api-service
  namespace: bv-app
spec:
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
